--- a/fifa/index.html
+++ b/fifa/index.html
@@ -5,13 +5,18 @@ previous_page: 'bagasell'
 active: portfolio
 ---
 <div class="presentation cf">
-    <h1 class="postheader">FIFA companion app</h1>
+    <h1 class="postheader">FIFA Companion App</h1>
 
-    <p class="cool">Design &amp; utveckling</p>	
-    <p>FIFA companion app är ett inofficiellt projekt som jag bidrog till under min studerande tid på Malmö Högskola, där jag studerade kursen Interaktionsdesign.</p>
-    <p>Vi var en grupp om fyra personer, tilldelade uppgiften att lösa ett problem med hjälp av design. Vi valde tv-spelet FIFA för detta projekt.</p>
-    <p>Gruppen var överens om att vi kunde göra förbättringar för FIFA online. Vi ville förbättra helhetskänslan och snabba upp vissa delar när man spelar online. TIll exempel när motståndaren pausar spelet, då måste man vänta upp till 45 sekunder, oavsett om man vill eller inte.</p>
+    <p class="cool">Design &amp; Development</p>	
+    <p>The FIFA companion app is an unofficial project made for the Interaction Design course at Malmö University.</p>
+    <p>In a group of four, we were assigned a task where we had to solve a problem with design.
+    We picked the console game FIFA for this.</p>
+    <p>We found that the online aspect of this game is a bit slow at times, so we wanted to speed things up.
+    For instance, when an opponent pauses the game online, you have to wait up to 45 seconds and do nothing.
+    This happens when the player wants to change players or just take a little break.</p>
     <img src="{{ "/img/work/fifa/fifa.jpg" | prepend: site.baseurl }}" alt="Fifa companion app" class="full-width-img">
-    <p>Vi kom på en idé om hur vi skulle kunna undvika detta. Då det ofta förstör motståndarens spelflyt/momentum. Nämligen companion app där spelarna kan ändra taktiker under spelets gång, utan att kunna pausa. Givetvis bara om de båda är med på samma villkor innan matchens start.</p>
-    <p>Inspirerad från det faktiska FIFA spelet till mobila enheter, var jag ansvarig för designen och utvecklingen av denna applikation. Den finns tillgänglig <a href="{{ site.baseurl }}/sites/fifa" target="_blank">här.</a> Prova att dra spelarna och släppa dom på andra positioner, eller prova att ändra formationen för att få en inblick i hur vi har tänkt.</p>
+    <p>So we found a way to prevent the stalling, since it easily breaks the gameflow/momentum.
+    A companion app where the players can change tactics during gameplay.</p>
+    <p>Taking inspiration from the actual FIFA game for handheld devices, 
+    I was responsible for the design and the development of this app. It is available <a href="{{ site.baseurl }}/sites/fifa" target="_blank">here. </a>You can try drag and dropping players and changing formations.</p>
 </div>
