--- a/glorias/index.html
+++ b/glorias/index.html
@@ -8,23 +8,22 @@ next_page: 'peterlandgren'
 <div class="presentation cf">
     <h1 class="postheader">Glorias</h1>
 
-    <p class="cool">Responsiv design</p>
+    <p class="cool">Mobile optimization</p>
 
-    <p>Lund är en stad med hög omsättning på nya besökare. Nya studenter, affärsmän från hela världen som besöker de många Lundabaserade internationella företagen.</p>
-    <p>Det sannolika scenariot i detta fall är att många använder en smartphone för att guida sig fram genom staden.</p>
-        <img src="{{ "/img/work/glorias/glorias.jpg" | prepend: site.baseurl }}" class="floated-img-left thirtyimg" alt="">
-
+    <p>Lund is a city with a high turnover on new visitors. New students, businessmen from all over the world visiting the international corporations and even a few tourists.</p>
+    <p>The likely scenario in this case is that a lot of these visitors are apt to use their phones and tablets to guide themselves through the city.</p>
+    <img src="{{ "/img/work/glorias/glorias.jpg" | prepend: site.baseurl }}" class="floated-img-left thirtyimg" alt="">
     <img src="{{ "/img/work/glorias/gloriasopenmenu.jpg" | prepend: site.baseurl }}" class="floated-img-right thirtyimg" alt="">
-    <p>Jag kom i kontakt med Glorias, en av Lunds mest kända restauranger. <br>Efter en kopp kaffe med deras grafiska designer och en av delägarna, rådde det ingen tvekan om att vi skulle mobilanpassa sidan.</p>
-    <p>Med en första skiss föreslog jag vilka delar som är viktiga att lyfta fram för en mobil besökare:</p>
+    <p>I got in touch with Glorias, one of the most famous resturants in Lund. After a cup of coffee with one of the co-owners, there was no doubt about their willingness to to optimize the website for this target group.</p>
+    <p>With an initial sketch, I proposed which parts are the most important ones to cast light upon for a mobile visitor:</p>
     <ul class="postul">
-        <li><p>Man ska snabbt kunna se öppettiderna.</p></li>
-        <li><p>Det ska vara enkelt att hitta dit.</p></li>
-        <li><p>Det ska vara enkelt att ringa och boka bord.</p></li>
-        <li><p>Man ska kunna se vad de erbjuder.</p></li>
+        <li><p>The opening hours should be easily spotted</p></li>
+        <li><p>It has to be very straightforward to navigate to the restaurant</p></li>
+        <li><p>One should easily be able to click and call the restaurant to book a table</p></li>
+        <li><p>The menu</p></li>
     </ul>
 
-    <p>Genom ett gott samarbete med deras grafiska designer blev resultatet en lyckad lösning som samtidigt bibehöll deras profil.</p>
+    <p>Through a good collaboration with their graphical designer, the result was a successful solution which maintained the original company profile.</p>
 
-    <p>Besök Glorias <a href="http://glorias.se" target="blank">här</a></p>
+    <p>Visit Glorias <a href="http://glorias.se" target="_blank">here</a></p>
 </div>
