--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ active: portfolio
     <img class="portfolioItem" src="img/masonryitems/siriusrestaurangen.svg" alt="Siriusrestaurangen">
       <figcaption>
         <h3>Siriusrestaurangen</h3>
-        <span>UX / WP design &amp; utveckling</span>
+        <span>UX / WP Design &amp; Development</span>
       </figcaption>
     </figure>
   </a>
@@ -19,7 +19,7 @@ active: portfolio
     <img class="portfolioItem" src="img/masonryitems/plockepinn.png" alt="Plockepinn">
       <figcaption>
         <h3>Plockepinn</h3>
-        <span>Responsiv design / WP utveckling</span>
+        <span>Responsive Design / WP Development</span>
       </figcaption>
     </figure>
   </a>
@@ -30,7 +30,7 @@ active: portfolio
       <h6 class="visible-lg">{{ post.excerpt | truncatewords:35 }}</h6>      
       <div class="presentation">
         <p class="default">
-          <a href="{{ post.url }}">Läs mer</a>
+          <a href="{{ post.url }}">Read full article</a>
         </p>
       </div>
     {% endfor %}
@@ -40,7 +40,7 @@ active: portfolio
     <img class="portfolioItem" src="img/masonryitems/glorias.png" alt="Glorias">
       <figcaption>
         <h3>Glorias</h3>
-        <span>Responsiv design</span>
+        <span>Mobile Optimization</span>
       </figcaption>
     </figure>
   </a>
@@ -49,7 +49,7 @@ active: portfolio
       <img class="portfolioItem" src="img/masonryitems/peterlandgren.svg" alt="Peter Landgren">
         <figcaption>
           <h3>Peter Landgren &amp; co</h3>
-          <span>Responsiv design</span>
+          <span>Mobile Optimization</span>
         </figcaption>
       </figure>
   </a>
@@ -58,7 +58,7 @@ active: portfolio
     <img class="portfolioItem" src="img/masonryitems/lemonbite.png" alt="Lemonbite">
       <figcaption>
         <h3>Lemonbite</h3>
-        <span>Design &amp; Utveckling</span>
+        <span>Design &amp; Development</span>
       </figcaption>
     </figure>
   </a>
@@ -67,7 +67,7 @@ active: portfolio
     <img class="portfolioItem" src="img/masonryitems/bagasell.png" alt="Bagasell">
       <figcaption>
         <h3>Bagasell</h3>
-        <span>Design &amp; Projektledning</span>
+        <span>Design &amp; Project Management</span>
       </figcaption>
     </figure>
   </a>
@@ -76,7 +76,7 @@ active: portfolio
     <img class="portfolioItem" src="img/masonryitems/fifa.png" alt="Fifa companion app">
       <figcaption>
         <h3>FIFA Companion App</h3>
-        <span>Design &amp; Utveckling</span>
+        <span>Design &amp; Development</span>
       </figcaption>
     </figure>
   </a>
@@ -86,7 +86,7 @@ active: portfolio
     <img class="portfolioItem freespinbonanzaimg" src="img/masonryitems/freespinbonanza.svg" alt="Freespin Bonanza">
       <figcaption>
         <h3>Freespin Bonanza</h3>
-        <span>Design &amp; WP Utveckling</span>
+        <span>Design &amp; WP Development</span>
       </figcaption>
     </figure>
   </div>
