--- a/lemonbite/index.html
+++ b/lemonbite/index.html
@@ -8,16 +8,20 @@ previous_page: 'peterlandgren'
 <div class="presentation cf">
     <h1 class="postheader">Lemonbite</h1>
 
-    <p class="cool">Design &amp; utveckling</p>
+    <p class="cool">Design &amp; Development</p>
 
-    <p>En gammal vän till mig som har en säljarbakgrund, ville börja sälja webbsidor. Han ville ha en väldigt enkel och stilren design på Lemonbite, med en kort presentation av företaget.</p>
+    <p>A friend of mine who had a history as a salesperson wanted to start selling websites cold-calling.</p>
+    <p>He wanted a very simple and visually clean website with a brief information about the company.
+    Smooth and subtle CSS3 animations, a simple grid and we were ready to go.</p>
+    <p>However, he found out that selling websites cold-calling wasn't the easiest task, since
+    most clients actually require massive trust in their webdesign company before they even think about going into work.
+    Using the phone as a sales weapon isn't the optimal way to go about sales in the design industry.</p>
     <img src="{{ "/img/work/lemonbite/lemonbite-imac-1.jpg" | prepend: site.baseurl }}" alt="Lemonbite Creative Agency" class="floated-img-left">
 
-    <p>Han kom dock snabbt på att det inte var lika enkelt att sälja webbdesign som de produkter han tidigare har sålt över telefon. Vid försäljning av denna typ av tjänster, är det väldigt viktigt att få ett stark kontakt med sina klienter. Det krävs tillit och bekvämlighet, vilket inte var det lättaste att bygga upp över "kalla samtal".</p>
-
-    <p>Trots det, var Lemonbite förmodligen ett av mina viktigaste projekt som frilansare. Projektet fick mig att förstå vikten av att ha en nära kontakt till sina klienter, och hur viktigt det är att agera extremt professionellt som designer.</p>
+    <p>Despite that, this was probably the most important project for me as a freelancer. It allowed me to
+    understand a whole lot about building trust with clients and how important it is to be extremely professional as a designer.</p>
     <img src="{{ "/img/work/lemonbite/lemonbite-imac-2.jpg" | prepend: site.baseurl }}" alt="Lemonbite" class="floated-img-right">
     
-    <p>Detta projekt förstärkte även min passion för webbrelaterat arbete och till företagande i allmänhet</a>
-    <p>Lemonbites webbplats finns <a href="{{ site.baseurl }}/sites/lemonbite" target="_blank">här</a>.
+    <p>It was also this project that fueled my passion for web related work and business on the whole.</p>
+    <p>The Lemonbite website can be seen <a href="{{ site.baseurl }}/sites/lemonbite" target="_blank">here</a>.
 </div>
