--- a/peterlandgren/index.html
+++ b/peterlandgren/index.html
@@ -8,15 +8,13 @@ active: portfolio
 <div class="presentation cf">
     <h1 class="postheader">Peter Landgren &amp; co</h1>
 
-    <p class="cool">Responsiv design</p>
+    <p class="cool">Mobile Optimization</p>
 
-  	<p>Jag fick äran att arbeta med <a href="http://peterlandgren.se" target="blank_">Peter Landgren &amp; Co</a>, en av Skånes största mäklarfirmor.</p>
+    <p>I was given the privilege to work with <a href="http://peterlandgren.se" target="_blank">Peter Landgren &amp; Co</a>, the largest real estate company of south Sweden.</p>
+    <p>After networking with their marketing director, they gave me an assignment to redesign the mobile version of their website.</p>
+    <p>Their brand identity wasn't pushing through for mobile visitors like it did on their desktop version. They wanted the mobile visitors to recognize that they were still on the same website.</p>
+    <p>Upon finishing the mobile redesign, I was assigned new tasks by this client.</p>
 
-    <p>Efter att ha nätverkat med deras marknadschef, blev jag tilldelad uppdraget att designa om den mobila delen av deras hemsida.</p>
-
-    <p>Det dåvarande utseendet av deras mobila sida var inte helt konsistent med företagets identitet. Deras önskan var att de besökare som besökte sidan via en mobil enhet skulle känna igen sig från den vanliga sidan.</p>
-
-    <p>Vid leverans av resultatet, blev jag tilldelad nya designuppdrag från Peter Landgren &amp; Co.</p>
     <div class="images">
       <div class="marginize">
     		<img src="{{ "/img/work/landgren/landgren-mobile-1.jpg" | prepend: site.baseurl }}" alt="" class="half-width-img">
