--- a/siriusrestaurangen/index.html
+++ b/siriusrestaurangen/index.html
@@ -7,34 +7,32 @@ next_page: 'plockepinn'
 <div class="presentation cf">
     <h1 class="postheader">Siriusrestaurangen</h1>
 
-    <p class="cool">UX / WP design &amp; utveckling</p>
+    <p class="cool">UX / WP Design &amp; Development</p>
 
-    <p>Jag träffade Ulf Nietosvuori, ägare av <a href="http://siriusrestaurangen.se" target="blank_">Siriusrestaurangen</a>. Ulf visade sig vara väl insatt i vikten av att ha ett professionellt ansikte utåt i den digitala världen.</p>
+    <p>I encountered Ulf Nietosvuori, ägare av <a href="http://siriusrestaurangen.se" target="blank_">Siriusrestaurangen</a>. Ulf proved to be well versed in the importance of having a professional company profile in the digital world.</p>
+  	<p>During the meeting we came to the various points that needed to be improved on their website, and a few problems that needed to be solved.</p>
+    <figure>
+    <img src="{{ "/img/work/siriusrestaurangen/sirius-old-front.jpg" | prepend: site.baseurl }}" class="floated-img-left" alt="The old Siriusrestaurangen website">
+    <figcaption class="floated-img-left">The old Siriusrestaurangen website</figcaption>
+    </figure>
+    <p>First and foremost, it was very tedious for Ulf updating the current website, he needed a CMS with a short learning curve.</p>
+    <p>We decided to use WordPress for this, which is easy to make out because you do not need to write any code in order to refresh the page.</p>
 
-  	<p>Under mötet kom vi fram till diverse punkter som behövde förbättras på den dåvarande hemsidan, och en del problem som behövde lösas.</p>
+    <p>The purpose of redesigning the website was mainly because Ulf wanted to broaden the target audience to include a younger generation as well. For this he wanted to modernize the website so that it looked more interesting, fresh and inviting.</p>
 
-    <img src="{{ "/img/work/siriusrestaurangen/sirius-old-front.jpg" | prepend: site.baseurl }}" class="floated-img-left" alt="">
+    <p>I used all of the pictures that they had taken earlier in various food etc. And a link between the website and <a href="http://instagram.com/" title="Instagram" target="_blank">Instagram</a> which many of the younger generation of Internet users could relate to.</p>
+    <p>At first glance, you are welcomed by an emotional picture of the food that characterizes the restaurant. Then follows a brief visual presentation of what the restaurant has to offer, and what added value the customer could expect from the restaurant.</p>
 
-    <p>Först och främst var det väldigt omständigt för Ulf att uppdatera sidan, han behövde ett publiceringsverktyg med kort inlärningskurva.</p>
+    <img src="{{ "/img/work/siriusrestaurangen/sirius-new-front.jpg" | prepend: site.baseurl }}" class="full-width-img" alt="The new Siriusrestaurangen website">
 
-    <p>Vi bestämde oss för att använda <a href="https://sv.wordpress.org/" title="Wordpress" target="blank">Wordpress</a> för detta, vilket är enkelt att begripa sig på eftersom man inte behöver skriva någon kod för att uppdatera sidan.</p>
-
-    <p>Syftet med att göra om sidan var främst för att Ulf ville bredda målgruppen för att omfatta även den yngre kretsen. För detta ville han modernisera sidan så att den såg mer intressant, fräsch och inbjudande ut.</p>
-
-    <p>För detta använde jag mig främst av de bilder som de hade tagit tidigare på diverse mat m.m. Samt en koppling mellan hemsidan och <a href="http://instagram.com/" title="Instagram" target="blank">Instagram</a> vilket många av den yngre generationens internetanvändare kan relatera till.</p>
-
-    <p>Vid första anblick bemötas man av en känsloladdad bild på den mat som kännetecknar restaurangen. Därefter följer en kort visuell presentation av vad restaurangen har att erbjuda, och vilket mervärde man kan förvänta sig som kund på restaurangen.</p>
-
-    <img src="{{ "/img/work/siriusrestaurangen/sirius-new-front.jpg" | prepend: site.baseurl }}" class="full-width-img" alt="">
-
-    <p>Idén med den nya matmenyn var att skapa en känsla av minimalism och en viss lyx. Dock var där en del tekniska problem som behövde lösas innan menyn kunde implementeras fullt ut. Den bygger på AJAX, vilket skapar diverse problem både vid sökoptimering och när man ska komma åt specifika delar av menyn via länkar.
-    Detta löste jag med hjälp av <a href="https://github.com/cowboy/jquery-hashchange" target="blank">jQuery hashchange</a> och resultatet blev att man kan komma åt de önskade delarna av menyn direkt, till exempel <a href="http://siriusrestaurangen.se/menyer/#brolopp" target="blank">Bröloppsmenyn</a>.</p>
+    <p>The idea of the new food menu was to create a sense of minimalism and a certain luxury. However, there were some technical problems that needed to be resolved before the menu could be fully implemented. It is based on AJAX, which creates various problems both for SEO and when trying to access specific parts of the menu via links.
+    I solved this using <a href="https://github.com/cowboy/jquery-hashchange" target="blank">jQuery hashchange</a> and the result is that you can access the desired parts of the menu directly, for example their <a href="http://siriusrestaurangen.se/menyer/#brolopp" target="blank">wedding menu</a>.</p>
 
     <img src="{{ "/img/work/siriusrestaurangen/sirius-new-menu.jpg" | prepend: site.baseurl }}" class="floated-img-right bordered" alt="">
 
-    <p>Andra problem som jag stötte på var att den gamla sidan var byggd på tabeller vilket gjorde det väldigt svårt att göra den responsiv.</p>
+    <p>Other problems I encountered was that the old side was built on the tables which made it somewhat difficult to make it responsive.</p>
 
-    <p>Detta var kanske det viktigaste momentet i hela projektet, just att sidan ska vara anpassad alla plattformar och enheter. Detta problemet löste jag dock ganska snabbt då jag byggde sidan från grunden och såg till med hjälp av media queries att sidan anpassar sig till både datorer, surfplattor och mobiltelefoner.</p>
+    <p>This was more or less the most important part of the whole project, the fact that the site had to be responsive for all platforms and devices. This problem I solved rather quickly when I built the page from scratch and used media queries to make the site adapt to both computers, tablets and mobile phones.</p>
 
-    <p>Ulf hade inte någon konkret bild av hur han ville att sidan skulle se ut, förutom att den skulle vara just responsiv, modern och lämpa sig för en bredare målgrupp. Redan vid första utkastet av den nya designen tyckte han att den lösningen såg väldigt passande ut. Det färdiga resultatet går att se på <a href="http://siriusrestaurangen.se/" target="blank">siriusrestaurangen.se</a></p>
+    <p>Ulf did not have a concrete vision of how he wanted the site to look like, except that it had to be responsive, modern and suitable for a wider audience. Already at the first draft of the new design, he felt that the solution seemed appropriate. The final result can be seen <a href="http://siriusrestaurangen.se/" target="blank">here</a></p>
 </div>
