--- a/bagasell/index.html
+++ b/bagasell/index.html
@@ -8,47 +8,33 @@ previous_page: 'lemonbite'
 <div class="presentation cf">
     <h1 class="postheader">Bagasell</h1>
 
-    <p class="cool">Design &amp; projektledning</p>
+    <p class="cool">Design &amp; Project Management</p>
 
-    <p>One2tel i Malmö behövde ett lättanvänt men kraftfullt system för orderhantering.</p>
-
-    <p>Ihop med en före detta Microsoft-anställd, en utvecklare vid namnet <a href="https://www.linkedin.com/pub/doug-gale/a2/275/251" target="_blank">Doug Gale</a>, skapade jag ett kraftfullt orderhanteringssystem för företag i telekombranschen.</p>
-
+    <p>A Malmö-based company (One2tel Malmö) needed an easy way to track their orders.</p>
+    <p>Along with a former Microsoft employee, a back-end developer by the name of <a href="https://www.linkedin.com/pub/doug-gale/a2/275/251" target="_blank">Doug Gale</a>, I created a powerful PHP-based order management system for telecom industries.</p>
     <img src="{{ "/img/work/bagasell/bagasell-1.jpg" | prepend: site.baseurl }}" alt="Bagasell dashboard" class="floated-img-left">
 
-    <p>Jag var ansvarig för hela projektet, samt UI designen.</p>
+    <p>I was responsible for the full management process and the UI design.</p>
 
     <img src="{{ "/img/work/bagasell/bagasell-2.jpg" | prepend: site.baseurl }}" alt="Bagasell new order" class="floated-img-right">
 
-    <p>Vi stötte på flertalet problem på vägen under detta projekt, och jag lärde mig verkligen vikten av att göra ett ordentligt förarbete innan man påbörjar ett projekt av denna omfattningen.</p>
+    <p>We customized Bagasell exclusively for cold-calling within the telecom industry. That is, the employees call customers and sell them extensions of their phone subscriptions.</p>
+    <p>Since it's a hard closing market where an employee might close anywhere between 1-20 customers per day, we had to make it quick and easy for them to register their sales so they can maintain their focus on what's important for them.</p>
+    <p>We used autocompletes, preset dropdowns, an easy-to-use edit mode &amp; more.</p>
+    <p>A way to place an order for the future, which makes sense for the telecom industry, was a requirement.</p>
+    <p>This was one of the many problems we faced. Some customers had subscriptions that ended in a month from the sales date, so there had to be a way for the employees to remember to register those sales. This also prevents other employees to "steal" someone elses customer by mistake.</p>
+    
 
-    <p>Att alltid planera för potentiella problem i förväg, men ändå bibehålla ett öppet sinne och vara flexibel för förbättringar under projektets gång. <br>Det var receptet som gjorde att vi kunde realisera detta projektet, trots att jag arbetade ihop med en utvecklare som satt på andra sidan av Atlanten.</p>
-
-    <p>Vi anpassade Bagasell exklusivt för telemarketingföretag. Det vill säga företag vars anställda har i uppgift att ringa kalla samtal till sina kunder, för att förlänga eller nyteckna abonnemang.</p>
-
-    <p>Eftersom det är en marknad där säljarna oftast gör 1-20 säljavslut dagligen, var det viktigt att vi anpassade systemet så att de snabbt och enkelt kunde placera ordrar, utan att behöva tappa fokus från det som är viktigast för dom.</p>
-
-    <p>Vi skapade ett system där de ansvariga enkelt kunde förinställa allt i förväg, för att underlätta så mycket som möjligt för säljarna.</p>
 
     <img src="{{ "/img/work/bagasell/bagasell-3.jpg" | prepend: site.baseurl }}" alt="Bagasell pick units" class="floated-img-left">
-
-
-    <p>Ett sätt att placera ordrar för ett framtida datum var ett måste.</p>
-
-    <p>Detta är ett av de många problem vi fick lösa på vägen. Vissa kunder hade abonnemang som löpte ut en månad efter att försäljningen skedde, så det var viktigt att säljarna kunde registrera dessa ordrar trots detta. Denna lösning löste också problemet att säljarna inte kunde "stjäla" varandras ordrar av misstag.</p>
-    
     <img src="{{ "/img/work/bagasell/bagasell-4.jpg" | prepend: site.baseurl }}" alt="Bagasell finalize" class="floated-img-right">
 
-    <p>Vi byggde också ett enkelt system för kommentarer, där säljarna och kundtjänsten kan kommunicera på ett smidigt sätt.</p>
-
-    <p>Orderhistoriken tillåter säljarna och kundtjänsten att snabbt få en överblick över vad som är nytt, vad som väntar, vad som är registrerat etc.</p>
-
-    <p>Denna sektion tillåter dessutom användarna att snabbredigera sina ordrar, lägga till fler kommentarer, få en enkel inblick av vilken kund de har sålt till, och mycket mer.</p>
+    <p>We also added an obvious comment system which makes it possible for the employees to communicate with their sales service department.</p>
+    <p>The order history section allows users and managers to get a quick visual overview of what's new, what's pending, what's registered &amp; more.</p>
+    <p>It also allows the users to quick-edit their order, place additional comments, get a quick-view of the customer they sold to &amp; more.</p>
+    <p>We also added a daterange picker, an ajax search system that automatically updates the rows upon searching, filters &amp; pagination</p>
 
     <img src="{{ "/img/work/bagasell/bagasell-6.jpg" | prepend: site.baseurl }}" alt="Bagasell notifications" class="floated-img-left">
 
-    <p>Vi skapade också AJAX-drivna datumintervall, söksystem, filter m.m.</p>
-
-
-    <p>Bagasell tillhandahåller ett fullmatat notifieringssystem där användarna på ett smidigt sätt kan hålla koll på alla viktiga händelser.</p>
+  <p>Bagasell utilizes a full-blown notification system where the users can keep track of all noteworthy events.</p>
 </div>
