--- a/plockepinn/index.html
+++ b/plockepinn/index.html
@@ -8,19 +8,23 @@ next_page: 'glorias'
 <div class="presentation cf">
     <h1 class="postheader">Plockepinn</h1>
 
-    <p class="cool">Responsiv design / WP utveckling</p>
+    <p class="cool">Responsive Design / WP Development</p>
 
-    <p>De flesta restaurangägare förstår vikten av att ha en mobilanpassad hemsida i dagsläget. Över 80% av den normala målgruppen för restauranger använder sig dagligen av internet i mobiltelefonen. <br>Källa: <a href="http://www.internetstatistik.se/" target="blank">internetstatistik.se</a></p>
+    <p>Most restaurant owners are aware of the importance of having a website that’s optimized for mobile visitors. Over 80% of the typical target group for restaurants are using internet in their mobiles daily. <br>Source: <a href="http://www.internetstatistik.se/" target="blank">internetstatistik.se</a></p>
 
-    <p>Många gånger känner man själv igen situationen när man är ute på vift och plötsligt blir hungrig. Man tar upp mobiltelefonen, söker efter närmaste restaurang och kollar menyn, öppettider m.m. <br>Självklart är det i detta fallet väldigt frustrerande att behöva brottas med en hemsida som inte är anpassad för mobiltelefoner.
-    Texten är svår att läsa, man hittar inte den information man snabbt behöver, man är hungrig och kanske till och med blir irriterad ganska fort.</p>
+    <p>Most of us recognize the situation when you are out and about, and suddenly you get hungry.
+    You pick up your mobile phone, search for the best restaurant nearby, you check their menu out, their opening hours etc.
+    <br>In a situation like this, it’s very frustrating having to mess around with a website that isn’t optimized for mobiles. A website where the text is hard to read, a website where you can’t find the information you instantly need. You are hungry and possibly prone to haviing low patience, the last thing you want to do is dig for information longer than you should.</p>
     <img src="{{ "/img/work/plockepinn/plockepinn.jpg" | prepend: site.baseurl }}" class="floated-img-left" alt="">
 
-    <p>Resultatet av detta? Jo man går in på konkurrentens hemsida där man klart och tydligt ser var restaurangen ligger och telefonnumret finns till hands ifall man behöver boka bord, menyn är lättåskådlig den med.</p>
+    <p>So what’s the result of all this?<br>
+    Well, you skip the non-optimized website and go straight to the competitors website, where you can clearly see where the restaurant is located, the menu easily accessible and the phone number right there for you to click and call.</p>
 
-    <p>De ansvariga hos Plockepinn var väl medvetna om hur viktigt det var att omfatta kunder från mobila enheter enligt kundens visuella önskemål, dock hade hemsidan vissa komplikationer som gjorde att den befintliga koden inte var lättmanipulerad utan att fel skulle uppstå.</p>
-    <p>De kunde heller inte uppdatera Wordpress utan att sidan skulle påverkas, vilket gjorde att det fanns enorma säkerhetshål i systemet.</p>
-    <p>Min uppgift till en början var att mobilanpassa den befintliga sidan, och göra mindre visuella justeringar bland annat på sidans marginaler inom rutnätet, typsnitt etc. Väldigt snart insåg jag att hela temat behövde göras om innan man kunde göra dessa ändringar. Vilket i sin tur gick väldigt smidigt, dock med vissa utmaningar.</p>
-    <p>Lunchmenyn krävde lite extra tankekraft för att kunna automatiseras enligt önskemål. Lösningen resulterade i en enorm lättnad för de ansvariga, vilket de uppskattade enormt då de hellre lägger sina resurser på viktigare uppgifter än att brottas med hemsidan över uppgifter som bör vara enkla.</p>
-    <p>Besök gärna <a href="http://plockepinn.se" target="blank">Plockepinn</a> och spana in deras lunchmeny.</p>
+    <p>The managers at Plockepinn were well aware with the importance of embracing visitors from mobile devices, with the customers expectations well met.
+    Though their current website wasn’t optimized for updates, most of the stuff was hard coded and they couldn’t even update Wordpress without the whole thing falling apart, which unfortunately left their whole site with huge security holes.</p>
+    <p>My initial assignment was to optimize their site for mobile devices and make smaller adjustments to fonts, margins, grid etc. But soon I realized their whole theme had to be rebuilt before these changes could be done properly.</p>
+    <p>The only real challenge that arised was the design of their lunch menu. It needed a second thought before it could be automated to fulfill their requests.<br>
+    The solution resulted in a huge relief for those responsible of the website, which was highly appreciated because they’d rather put their focus on more important tasks than having to mess around with the website over tasks that should be very straightforward.
+    </p>
+    <p>The Plockepinn website can be found <a href="http://plockepinn.se" target="_blank">here</a></p>
 </div>
