small fix freespin bonanza

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ active: portfolio
   </a>
   <div class="box alldindauti pfcard">
     <figure>
-    <span class="kmrsnart">Lanseras snart!</span>      
+    <span class="kmrsnart">Coming soon!</span>      
     <img class="portfolioItem freespinbonanzaimg" src="img/masonryitems/freespinbonanza.svg" alt="Freespin Bonanza">
       <figcaption>
         <h3>Freespin Bonanza</h3>
