added ustwo coming soon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@ active: portfolio
 ---
 
 <div class="colWrapper">
+  <a class="box ustwo pfcard" href="ustwo">
+    <figure>
+    <span class="kmrsnart">Coming soon!</span>      
+    <img class="portfolioItem" src="img/masonryitems/ustwo.svg" alt="UsTwo">
+      <figcaption>
+        <h3>UsTwo</h3>
+        <span>WP Development</span>
+      </figcaption>
+    </figure>
+  </a>
   <a class="box siriusrestaurangen pfcard" href="siriusrestaurangen">
     <figure>
     <img class="portfolioItem" src="img/masonryitems/siriusrestaurangen.svg" alt="Siriusrestaurangen">
@@ -13,16 +23,7 @@ active: portfolio
         <span>UX / WP Design &amp; Development</span>
       </figcaption>
     </figure>
-  </a>
-  <a class="box plockepinn pfcard" href="plockepinn">
-    <figure>
-    <img class="portfolioItem" src="img/masonryitems/plockepinn.png" alt="Plockepinn">
-      <figcaption>
-        <h3>Plockepinn</h3>
-        <span>Responsive Design / WP Development</span>
-      </figcaption>
-    </figure>
-  </a>
+  </a>  
   <div class="box postcard pfcard">
     {% for post in site.posts limit:1 %}
       <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
@@ -35,6 +36,15 @@ active: portfolio
       </div>
     {% endfor %}
   </div>  
+  <a class="box plockepinn pfcard" href="plockepinn">
+    <figure>
+    <img class="portfolioItem" src="img/masonryitems/plockepinn.png" alt="Plockepinn">
+      <figcaption>
+        <h3>Plockepinn</h3>
+        <span>Responsive Design / WP Development</span>
+      </figcaption>
+    </figure>
+  </a>  
   <a class="box glorias pfcard" href="glorias">
     <figure>
     <img class="portfolioItem" src="img/masonryitems/glorias.png" alt="Glorias">
@@ -80,15 +90,4 @@ active: portfolio
       </figcaption>
     </figure>
   </a>
-  <div class="box alldindauti pfcard">
-    <figure>
-    <span class="kmrsnart">Coming soon!</span>      
-    <img class="portfolioItem freespinbonanzaimg" src="img/masonryitems/freespinbonanza.svg" alt="Freespin Bonanza">
-      <figcaption>
-        <h3>Freespin Bonanza</h3>
-        <span>Design &amp; WP Development</span>
-      </figcaption>
-    </figure>
-  </div>
-
 </div>
