added ustwo work presentation and og graph stuff

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ active: portfolio
     <img class="portfolioItem" src="img/masonryitems/ustwo.svg" alt="UsTwo">
       <figcaption>
         <h3>UsTwo</h3>
-        <span>WP Development</span>
+        <span>WP/AngularJS Development</span>
       </figcaption>
     </figure>
   </a>
