--- a/siriusrestaurangen/index.html
+++ b/siriusrestaurangen/index.html
@@ -2,6 +2,7 @@
 layout: page
 title: Daniel Nikolovski | Siriusrestaurangen
 active: portfolio
+previous_page: 'ustwo'
 next_page: 'plockepinn'
 ---
 <div class="presentation cf">
