--- a/ustwo/index.html
+++ b/ustwo/index.html
@@ -3,6 +3,7 @@ layout: page
 title: Daniel Nikolovski | UsTwo
 active: portfolio
 image: ustwo.png
+description: I got the honor to work with UsTwo and develop the new promotional website for Sparbanken Syd
 next_page: 'siriusrestaurangen'
 ---
 <div class="presentation cf">
