--- a/siriusrestaurangen/index.html
+++ b/siriusrestaurangen/index.html
@@ -10,7 +10,7 @@ next_page: 'plockepinn'
 
     <p class="cool">UX / WP Design &amp; Development</p>
 
-    <p>I encountered Ulf Nietosvuori, ägare av <a href="http://siriusrestaurangen.se" target="blank_">Siriusrestaurangen</a>. Ulf proved to be well versed in the importance of having a professional company profile in the digital world.</p>
+    <p>I encountered Ulf Nietosvuori, owner of <a href="http://siriusrestaurangen.se" target="blank_">Siriusrestaurangen</a>. Ulf proved to be well versed in the importance of having a professional company profile in the digital world.</p>
   	<p>During the meeting we came to the various points that needed to be improved on their website, and a few problems that needed to be solved.</p>
     <figure>
     <img src="{{ "/img/work/siriusrestaurangen/sirius-old-front.jpg" | prepend: site.baseurl }}" class="floated-img-left" alt="The old Siriusrestaurangen website">
