added h5 and donii

--- a/bagasell/index.html
+++ b/bagasell/index.html
@@ -2,8 +2,7 @@
 layout: page
 title: Daniel Nikolovski | Bagasell
 active: portfolio
-next_page: 'fifa'
-previous_page: 'lemonbite'
+previous_page: 'peterlandgren'
 ---
 <div class="presentation cf">
     <h1 class="postheader">Bagasell</h1>
