--- a/peterlandgren/index.html
+++ b/peterlandgren/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: Daniel Nikolovski | Peter Landgren &amp; co
 previous_page: 'glorias'
-next_page: 'lemonbite'
+next_page: 'bagasell'
 active: portfolio
 ---
 <div class="presentation cf">
