--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <style>
       html, body {
         height:100%;
+        margin:0;
+        padding:0;
         font-family: "mr-eaves-modern",sans-serif;
         font-weight:300;
       }
@@ -22,7 +24,7 @@
       }
       .container {
         height: 100%;
-        padding:40px;
+        padding:0 40px;
         margin:0 auto;
         max-width:768px;
         display: flex;
