--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div>
           <p>Hi, I'm <span>Daniel Nikolovski</span>. I do SEO and I mainly work on my personal projects. If you've got a cool project, <a href="mailto:hello@danielnikolovski.com">reach out</a>.</p>
 
-          <p>Brands I'm proud to have worked with: <a href="http://h5.fr/">H5</a>, <a href="http://ustwo.com/">UsTwo</a>, <a href="https://www.catenamedia.com">Catena Media</a>, <a href="https://bettercollective.com/">Better Collective</a> &amp; many more.
+          <p>Brands I'm proud to have worked with: <a href="http://h5.fr/" target="_blank">H5</a>, <a href="http://ustwo.com/" target="_blank">UsTwo</a>, <a href="https://www.catenamedia.com" target="_blank">Catena Media</a>, <a href="https://bettercollective.com/" target="_blank">Better Collective</a> &amp; many more.
         </div>
       </div>
 
